K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-reddit-app
  annotations:
    # REMOVE THIS LINE BELOW:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: urtechmitra.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reddit-clone-service
            port:
              number: 3000
